[gd_scene load_steps=5 format=3 uid="uid://cpi4qxc0lkgyk"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_dypt0"]
[ext_resource type="PackedScene" uid="uid://stpeyj2q7wkb" path="res://UI/settings_menu.tscn" id="2_axhvf"]
[ext_resource type="AudioStream" uid="uid://deh2rynls3ltc" path="res://Audio/Music/3rdParty/Retro Ambience Short 09.wav" id="2_qsn47"]
[ext_resource type="PackedScene" uid="uid://b5u8bal3uxm8b" path="res://UI/credits_screen.tscn" id="4_b68re"]

[node name="MainMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dypt0")
main_menu_music = ExtResource("2_qsn47")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MainMenuLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NEW GAME"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="CreditsScreen" parent="." instance=ExtResource("4_b68re")]

[node name="SettingsMenu" parent="." instance=ExtResource("2_axhvf")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CreditsScreen/MarginContainer/VBoxContainer/BackButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="SettingsMenu/Panel/MarginContainer/VBoxContainer/BackButton" to="." method="_on_settings_button_pressed"]

[editable path="CreditsScreen"]
[editable path="SettingsMenu"]
